@@ -1,3 +1,9 @@
+2006-07-12  Alexander Malysh <amalysh at kannel.org>
+  * doc/userguide/userguide.xml, gw/smsbox.c, gwlib/cfg.def: applied patch
+    that adds two new config options to smsbox group: bearerbox-port and
+    bearerbox-port-ssl. This patch should help external modules at least
+    sqlbox now.
+
 2006-07-07  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/smpp_pdu.c: added a new string for smpp_error_to_string() 
     indicating that we have a value in the vendor-specific range. NLC.
